--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.header{
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.logo{
+  width:100px;
+}
+
+.nav-items > ul {
+  display: flex ;
+  font-size: 24px;
+  list-style-type: none;
+}
+
+.nav-items > ul > li {
+  margin: 10px;
+  padding: 10px;
+}
+
+.res-container{
+  display: flex;
+  flex-wrap: wrap;
+
+}
+.res-card{
+  width: 200px;
+  height: 350px;
+  padding: 5px;
+  margin: 5px;
+}
+
+.res-card:hover {
+  border: 1px solid black;
+  cursor: pointer;
+
+}
+
+.search{
+  padding: 10px;
+}
+
+.res-logo{
+  width: 190px;
+  padding: 5px;
 }
