--- a/src/index.css
+++ b/src/index.css
@@ -1,75 +1,3 @@
-.header{
-  display: flex;
-  justify-content: space-between;
-  border: 1px solid black;
-}
-
-.logo{
-  width:100px;
-}
-
-.nav-items > ul {
-  display: flex ;
-  font-size: 24px;
-  list-style-type: none;
-}
-
-.nav-items > ul > li {
-  margin: 10px;
-  padding: 10px;
-}
-
-.res-container{
-  display: flex;
-  flex-wrap: wrap;
-
-}
-.res-card{
-  width: 200px;
-  height: 350px;
-  padding: 5px;
-  margin: 5px;
-}
-
-.res-card:hover {
-  border: 1px solid black;
-  cursor: pointer;
-
-}
-
-.search{
-  padding: 10px;
-}
-
-.res-logo{
-  width: 190px;
-  padding: 5px;
-}
-
-.filter-btn{
-  cursor: pointer;
-  margin-left: 10px;
-}
-
-.shimmer-card{
-  margin: 20px;
-  width:200px;
-  height:400px;
-  background-color: #f0f0f0;
-}
-
-.shimmer-container{
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.login{
-  padding: 0px 20px;
-  cursor: pointer;
-}
-
-.filter{
-  display: flex;
-  margin: 10px;
-  
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
